# ALGO

./: README.md  pyproject.toml  requirements.txt
scripts/: backtest.py  engineer_features.py  ingest_data.py  init_db.py  run_strategy.py
sql/: schema.sql
src/trading_research/: __init__.py  paths.py
tests/: test_paths.py
